melhoria de interface e adição de funcionalidades

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
-* CoreUI - Angular 17.2 Free Admin Template
+  This page is powered by CoreUI - Angular 17.2
+* CoreUI - Angular 17.2
 * @version v4.7.15
 * @link https://coreui.io/angular/
 * Copyright (c) 2017-2024 creativeLabs Łukasz Holeczek
